--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
             "clsx": "*",
             "cmdk": "^1.1.1",
             "embla-carousel-react": "^8.6.0",
+            "fdir": "^6.5.0",
             "input-otp": "^1.4.2",
             "leaflet": "*",
             "lucide-react": "^0.487.0",
@@ -56,7 +57,7 @@
             "@types/react": "^19.2.0",
             "@types/react-dom": "^19.2.0",
             "@vitejs/plugin-react-swc": "^3.10.2",
-            "vite": "6.3.5"
+            "vite": "^6.3.6"
       },
       "scripts": {
             "dev": "vite",
